# verita

./: .gitignore  Cargo.toml  README.md  dev.sh  fuzion-verita.toml  package-lock.json  package.json
dev/: .env  docker-compose.yml
src/: main.rs
src/apis/: hello.rs  mod.rs
src/apis/session/: init.rs  login.rs  logout.rs  mod.rs
src/apis/views/: login.rs  mod.rs  shell.rs
src/dao/: credential.rs  mod.rs  realm.rs  user.rs
src/domain/: cookies.rs  identity.rs  jwt.rs  mod.rs
src/domain/dynamic_query/: dynamic_query.rs  fragment.rs  fragment_like.rs  mod.rs  query_builder.rs  utils.rs
src/dto/: identity.rs  login.rs  mod.rs  shell.rs
src/migrations/: mod.rs
src/migrations/v0_1_0/: mod.rs  up.sql
src/repos/: credential.rs  mod.rs  realm.rs  session.rs  user.rs
src/server/: config.rs  mod.rs
src/services/: credential.rs  mod.rs  realm.rs  session.rs  setup.rs  user.rs
web/: declaration.d.ts  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.webpack.json  webpack.config.js
web/src/html/: index.hbs
web/src/html/helpers/: inline.js
web/src/js/apps/verita/: index.ts  routes.ts  store.ts  verita.lit.scss  verita.scss  verita.ts
web/src/js/components/: basic-page.lit.scss  basic-page.ts
web/src/js/components/client-shell/: client-shell.lit.scss  client-shell.ts  drawer.lit.scss  drawer.ts  shell-user-badge.lit.scss
web/src/js/components/loader/: loader.lit.scss  loader.ts
web/src/js/components/verita/: verita.ts
web/src/js/domain/: identity.ts
web/src/js/dto/: identity.ts  realm.ts  shell.ts
web/src/js/modules/: client-api.ts
web/src/js/pages/: landing.ts
web/src/js/pages/configure/authentication/: authentication.ts
web/src/js/pages/configure/federation/: federation.ts
web/src/js/pages/configure/identity-providers/: identity-providers.ts
web/src/js/pages/configure/realms/: realms.ts
web/src/js/pages/landing/: landing.lit.scss  landing.ts
web/src/js/pages/login/: login.lit.scss  login.ts
web/src/js/pages/manage/clients/: clients.ts
web/src/js/pages/manage/groups/: groups.ts
web/src/js/pages/manage/roles/: roles.ts
web/src/js/pages/manage/sessions/: sessions.ts
web/src/js/pages/manage/users/: users.ts
web/src/js/services/: session.ts  verita.ts  view.ts
web/webpack/: base.js  escape-lit-scss.js
