[package]
name = "fuzion-verita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-rt = "2.9.0"
actix-web = "4.5.1"
actix-web-thiserror = "0.2.1"
clap = { version = "4.5.3", features = [ "derive", "env" ] }
colored = "2.1.0"
deadpool-postgres = "0.12.1"
fuzion-commons = { path = "../fuzion-commons" }
lazy_static = "1.4.0"
log = "0.4.21"
postgres = "0.19.7"
ring = "0.17.8"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
slog = "2.7.0"
thiserror = "1.0.58"
toml = "0.8.11"
